Added shape bricks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,11 @@
   <string name="playing_field_width_key">playing_field_width</string>
   <string name="playing_field_width_title">Playing field width</string>
 
+  <string name="game_dummy_text">Game fragment</string>
+  <string name="scores_dummy_text">Scores fragment</string>
+  <string name="scores_fragment_label">High Scores</string>
+  <string name="game_fragment_label">Tetris</string>
+  <string name="scores_label">Scores</string>
+  <string name="game_label">Game</string>
+
 </resources>
