Restored interfragment navigation;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,14 +42,25 @@
 
   <string name="game_dummy_text">Game fragment</string>
   <string name="scores_dummy_text">Scores fragment</string>
-  <string name="scores_fragment_label">High Scores</string>
   <string name="game_fragment_label">Tetris</string>
+  <string name="scores_fragment_label">High Scores</string>
   <string name="scores_label">Scores</string>
   <string name="game_label">Game</string>
   <string name="move_left">Move left</string>
   <string name="move_right">Move right</string>
-  <string name="rotate_right">Rotate right</string>
-  <string name="drop">Drop</string>
   <string name="rotate_left">Rotate left</string>
+  <string name="drop">Drop</string>
+  <string name="rotate_right">Rotate right</string>
+  <string name="current_level">Current level</string>
+  <string name="current_rows_removed">Current rows removed</string>
+  <string name="score">Score</string>
+  <string name="game_over">Game Over!</string>
+  <string name="final_score_format">Score: %,d</string>
+  <string name="high_scores">High scores</string>
+  <string name="ranking_header">#</string>
+  <string name="display_name_header">Player</string>
+  <string name="score_header">Score</string>
+  <string name="rows_removed_header">Rows</string>
+  <string name="created_header">Date</string>
 
 </resources>
